// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assetsManager reducer sould handle EXCHANGE_EXCHANGES_LIST_GETTING_FINISH 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": true,
    "isFetching": false,
    "isPending": false,
    "list": {
      "test": {
        "address": test,
        "assetBalance": 0,
        "authorizedManager": null,
        "buyPrice": 0,
        "ethBalance": 0,
        "id": null,
        "isActive": true,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "owner": null,
        "sellPrice": 0,
        "symbol": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 1,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_EXCHANGES_LIST_GETTING_START 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": true,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_DATA_FINISH 1`] = `
  "assetSymbols": {
    "0": TIME,
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": true,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_DATA_START 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": true,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_ORDERS_FINISH 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": true,
    "isFetching": false,
    "isPending": false,
    "list": {
      "null": {
        "address": null,
        "assetBalance": 0,
        "authorizedManager": null,
        "buyPrice": 0,
        "ethBalance": 0,
        "id": null,
        "isActive": true,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "owner": null,
        "sellPrice": 0,
        "symbol": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": Function,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_ORDERS_START 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": true,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_OWNERS_EXCHANGES_FINISH 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": true,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_OWNERS_EXCHANGES_START 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": true,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_TOKENS_LIST_FINISH 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": true,
    "isFetching": false,
    "isPending": false,
    "list": {
      "null": {
        "address": null,
        "allowance": {
        },
        "balance": 0,
        "dao": null,
        "decimals": null,
        "fee": null,
        "feeAddress": null,
        "icon": null,
        "id": null,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isOptional": true,
        "isPending": false,
        "isReissuable": false,
        "managersList": null,
        "name": null,
        "platform": null,
        "symbol": null,
        "timestamp": null,
        "totalSupply": 0,
        "transactionHash": null,
        "url": null,
        "withFee": false,
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_GET_TOKENS_LIST_START 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": true,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_MIDDLEWARE_DISCONNECTED 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": true,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": false,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_REMOVE_FOR_OWNER 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_SET_FILTER 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
    "symbol": TIME,
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_SET_PAGES_COUNT 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 1,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_UPDATE 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
      "test": {
        "address": test,
        "assetBalance": 0,
        "authorizedManager": null,
        "buyPrice": 0,
        "ethBalance": 0,
        "id": null,
        "isActive": true,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "owner": null,
        "sellPrice": 0,
        "symbol": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
      "test": {
        "address": test,
        "assetBalance": 0,
        "authorizedManager": null,
        "buyPrice": 0,
        "ethBalance": 0,
        "id": null,
        "isActive": true,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isPending": false,
        "owner": null,
        "sellPrice": 0,
        "symbol": null,
        "timestamp": null,
        "transactionHash": null,
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;

exports[`assetsManager reducer sould handle EXCHANGE_UPDATE_FOR_OWNER 1`] = `
  "assetSymbols": {
  },
  "exchanges": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "exchangesForOwner": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "filter": {
  },
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isPending": false,
  "lastPages": 0,
  "pagesCount": 0,
  "showFilter": true,
  "timestamp": null,
  "tokens": {
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },
  "transactionHash": null,

`;
